--- a/src/main/webapp/styles/select.css
+++ b/src/main/webapp/styles/select.css
@@ -24,7 +24,7 @@
 .select,
 .select>ul {
 	border: 1px solid rgba(0,255,255,0.9);
-	background: rgba(0,0,0,0.3);
+	background: rgba(0,54,54,0.9);
 }
 
 .select.error {
@@ -50,11 +50,17 @@
 	width: 50px; /*Width of select dropdown to give space for arrow image*/
 }
 
+.select.w36,
+.select.w36>ul {
+	background-position: 16px 4px;  /*Position of the background-image*/
+	width: 36px; /*Width of select dropdown to give space for arrow image*/
+}
+
 .select {
-	height: 20px;
-	line-height: 20px;
+	height: 16px;
+	line-height: 16px;
 	overflow: hidden;
-	background: url('../images/arrow-down.png') no-repeat rgba(1,1,1,0);  /*Adds background-image*/
+	background: url('../images/arrow-down.png') no-repeat rgba(0,54,54,0.9);  /*Adds background-image*/
 	display: inline-block;
 	cursor: pointer;
 }
@@ -71,6 +77,7 @@
 	margin-left: -1px;
 	padding: 0px;
 	overflow: hidden;
+	z-index: 10;
 }
 
 .select>ul>li {
@@ -91,5 +98,4 @@
 	position: absolute;
 	margin-top: 0px;
 	margin-left: -1px;
-	background: rgba(0,0,0,0.9);
 }
